refined the exercises

--- a/day-03/pandas-study/sf-salaries-exercises.ipynb
+++ b/day-03/pandas-study/sf-salaries-exercises.ipynb
@@ -26,9 +26,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -42,9 +40,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.read_csv('Salaries.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -58,9 +54,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -74,27 +68,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.info()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.describe()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -108,9 +96,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['BasePay'].mean()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -124,9 +110,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['OvertimePay'].max()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,9 +124,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['EmployeeName'] == 'JOSEPH DRISCOLL']['JobTitle']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -150,8 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Who got the max overtimepay benefit?\n",
-    "df[df['OvertimePay'] == df['OvertimePay'].max()]['EmployeeName']"
+    "# Who got the max overtimepay benefit?\n"
    ]
   },
   {
@@ -166,9 +147,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['EmployeeName'] == 'JOSEPH DRISCOLL']['TotalPayBenefits']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -182,18 +161,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['TotalPayBenefits'] == df['TotalPayBenefits'].max()]['EmployeeName']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['TotalPayBenefits'] == df['TotalPayBenefits'].min()]['EmployeeName']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -207,9 +182,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['TotalPayBenefits'] == df['TotalPayBenefits'].min()]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -223,9 +196,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.drop(['Id', 'EmployeeName', 'JobTitle', 'Agency', 'Notes', 'Status'], axis=1).groupby('Year').mean()['OvertimePay']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -239,9 +210,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['JobTitle'].nunique()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -255,9 +224,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['JobTitle'].value_counts().head(5)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -271,9 +238,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sum(df[df['Year'] == 2013]['JobTitle'].value_counts() == 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -287,22 +252,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def chief_string(title):\n",
-    "    if 'chief' in title:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sum(df['JobTitle'].apply(lambda s: chief_string(s.lower())))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -316,9 +273,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['JobTitle'].apply(lambda s: chief_string(s.lower()))]['JobTitle'].unique()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -332,19 +287,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['title_len'] = df['JobTitle'].apply(len)\n",
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[['title_len', 'TotalPayBenefits']].corr()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
