cleaned up assignment codes

--- a/day-02/stats-share/hypothesis-tests/hypothesis-anova.ipynb
+++ b/day-02/stats-share/hypothesis-tests/hypothesis-anova.ipynb
@@ -102,27 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F-statistic: nan\n",
-      "p-value: nan\n",
-      "Fail to reject the null hypothesis: No significant difference in cholesterol levels between chest pain types.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mindf\\anaconda3\\Lib\\site-packages\\scipy\\stats\\_stats_py.py:4102: DegenerateDataWarning: at least one input has length 0\n",
-      "  if _f_oneway_is_too_small(samples):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from scipy.stats import f_oneway\n",
@@ -132,11 +114,199 @@
     "heart_data = pd.read_csv('heart.csv')\n",
     "\n",
     "# Separate cholesterol levels by chest pain type\n",
-    "chol_cp_0 = heart_data[heart_data['cp'] == 0]['chol']  # Typical angina\n",
-    "chol_cp_1 = heart_data[heart_data['cp'] == 1]['chol']  # Atypical angina\n",
-    "chol_cp_2 = heart_data[heart_data['cp'] == 2]['chol']  # Non-anginal pain\n",
-    "chol_cp_3 = heart_data[heart_data['cp'] == 3]['chol']  # Asymptomatic\n",
-    "\n",
+    "chol_cp_0 = heart_data[heart_data['ChestPain'] == 'typical']['Chol']  # Typical angina\n",
+    "chol_cp_1 = heart_data[heart_data['ChestPain'] == 'asymptomatic']['Chol']  # Atypical angina\n",
+    "chol_cp_2 = heart_data[heart_data['ChestPain'] == 'nonanginal']['Chol']  # Non-anginal pain\n",
+    "chol_cp_3 = heart_data[heart_data['ChestPain'] == 'nontypical']['Chol']  # Asymptomatic\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ChestPain</th>\n",
+       "      <th>RestBP</th>\n",
+       "      <th>Chol</th>\n",
+       "      <th>Fbs</th>\n",
+       "      <th>RestECG</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>ExAng</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>Slope</th>\n",
+       "      <th>Ca</th>\n",
+       "      <th>Thal</th>\n",
+       "      <th>AHD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>typical</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>fixed</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>asymptomatic</td>\n",
+       "      <td>160</td>\n",
+       "      <td>286</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>asymptomatic</td>\n",
+       "      <td>120</td>\n",
+       "      <td>229</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>reversable</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nonanginal</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nontypical</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Age  Sex     ChestPain  RestBP  Chol  Fbs  RestECG  MaxHR  \\\n",
+       "0           1   63    1       typical     145   233    1        2    150   \n",
+       "1           2   67    1  asymptomatic     160   286    0        2    108   \n",
+       "2           3   67    1  asymptomatic     120   229    0        2    129   \n",
+       "3           4   37    1    nonanginal     130   250    0        0    187   \n",
+       "4           5   41    0    nontypical     130   204    0        2    172   \n",
+       "\n",
+       "   ExAng  Oldpeak  Slope   Ca        Thal  AHD  \n",
+       "0      0      2.3      3  0.0       fixed   No  \n",
+       "1      1      1.5      2  3.0      normal  Yes  \n",
+       "2      1      2.6      2  2.0  reversable  Yes  \n",
+       "3      0      3.5      3  0.0      normal   No  \n",
+       "4      0      1.4      1  0.0      normal   No  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F-statistic: 0.6228824563331001\n",
+      "p-value: 0.600691502205988\n",
+      "Fail to reject the null hypothesis: No significant difference in cholesterol levels between chest pain types.\n"
+     ]
+    }
+   ],
+   "source": [
     "# Perform one-way ANOVA\n",
     "f_stat, p_value = f_oneway(chol_cp_0, chol_cp_1, chol_cp_2, chol_cp_3)\n",
     "\n",
